--- a/AlarmeDeluxe/app/src/main/AndroidManifest.xml
+++ b/AlarmeDeluxe/app/src/main/AndroidManifest.xml
@@ -26,6 +26,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ca.ulaval.ima.mp.alarmedeluxe.MainActivity" />
         </activity>
+        <activity
+            android:name=".AlarmDialogPopUp"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ca.ulaval.ima.mp.alarmedeluxe.MainActivity" />
+        </activity>
+        <receiver android:name=".AlarmReceiver"/>
     </application>
 
 </manifest>
