--- a/AlarmeDeluxe/app/src/main/AndroidManifest.xml
+++ b/AlarmeDeluxe/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ca.ulaval.ima.mp.alarmedeluxe">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
