youtube alarm popup
modification pour appeler la bonne activité et la video part si alarme
de type youtube

--- a/AlarmeDeluxe/app/src/main/AndroidManifest.xml
+++ b/AlarmeDeluxe/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
 
         <receiver android:name=".AlarmReceiver" />
 
-        <activity android:name=".AlarmRingingActivity"></activity>
+        <activity android:name=".AlarmRingingActivity"/>
+        <activity android:name=".YoutubeAlarmActivity"/>
     </application>
 
 </manifest>
