--- a/AlarmeDeluxe/app/build.gradle
+++ b/AlarmeDeluxe/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.google.android.gms:play-services-auth:9.8.0'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev182-1.22.0'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
