--- a/AlarmeDeluxe/app/build.gradle
+++ b/AlarmeDeluxe/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
+def AAVersion = '4.1.0'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -28,6 +30,8 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.google.apis:google-api-services-youtube:v3-rev182-1.22.0'
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
