--- a/AlarmeDeluxe/app/src/main/AndroidManifest.xml
+++ b/AlarmeDeluxe/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
         <activity android:name=".AlarmRingingActivity"/>
         <activity android:name=".YoutubeAlarmActivity"/>
+        <activity android:name=".YoutubeAlarmActivity_"/>
     </application>
 
 </manifest>
