--- a/AlarmeDeluxe/app/build.gradle
+++ b/AlarmeDeluxe/app/build.gradle
@@ -18,6 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
@@ -35,5 +38,6 @@ dependencies {
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+    compile 'com.android.support:recyclerview-v7:25.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
