--- a/AlarmeDeluxe/app/src/main/AndroidManifest.xml
+++ b/AlarmeDeluxe/app/src/main/AndroidManifest.xml
@@ -33,9 +33,8 @@
         <receiver android:name=".AlarmReceiver" />
 
         <activity android:name=".AlarmRingingActivity"/>
-        <activity android:name=".AlarmRingingActivity_"/>
-        <activity android:name=".YoutubeAlarmActivity"/>
-        <activity android:name=".YoutubeAlarmActivity_"/>
+        <activity android:name=".youtube.YoutubeAlarmActivity"/>
+        <activity android:name=".youtube.YoutubeAlarmActivity_"/>
     </application>
 
 </manifest>
